--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
           <h2>explore our exciting world of kid</h2>
           <p>
             Experience personalized design with us. friendly cars designed for
-            endless fun and learning that become a true reflection of your
-            unique style.
+            endless fun and learning.
           </p>
           <a href="#">contact</a>
         </div>
